--- a/src/app/modelos/mover-actividad/mover-actividad.component.html
+++ b/src/app/modelos/mover-actividad/mover-actividad.component.html
@@ -2,7 +2,7 @@
     
     
     
-    <form [formGroup]="moverActividadForm"  (submit)="actividadCompletar">
+    <form [formGroup]="moverActividadForm">
         Fecha de Actividad: {{actividad.fecha_actividad}}
         <mat-form-field appearance="fill">
             <mat-label>Fecha nueva de actividad</mat-label>
@@ -18,15 +18,17 @@
         {{actividad.curr_actividad}}<br><br>
         <mat-form-field appearance="fill">
             <mat-label>Razon de moverla</mat-label>
-            <input matInput formControlName="notas" placeholder="Razón para mover la actividad">
+            <input matInput formControlName="razon" placeholder="Razón para mover la actividad">
             <mat-error *ngIf="moverActividadForm.controls['razon'].invalid">Se necesitan notas de la actividad</mat-error>
         </mat-form-field>
         <br>
         <div class="button-container">
-            <button mat-raised-button color="primary" type="submit">Mover Actividad</button>
+            
         </div>
         
     </form>
     <br>
-    <button mat-raised-button color="primary" (click)="closeView()">Mover Completar</button>
+    
+    <button mat-raised-button color="primary" (click)="moverActividad()">Mover Actividad</button>
+    <button mat-raised-button color="primary" (click)="closeView()">Cerrar</button>
 </div>
