--- a/src/app/modelos/ver-opp/ver-opp.component.css
+++ b/src/app/modelos/ver-opp/ver-opp.component.css
@@ -2,3 +2,20 @@
     width: 80vw; /* Set width of the box */
     height: 80vh; /* Set height of the box */
 }
+
+.Ganada{
+    color: green;
+}
+
+.Perdida{
+    color: red;
+
+}
+
+.Abierta{
+    color: black
+}
+
+.Lead{
+    color: grey;
+}
