--- a/src/app/modelos/ver-opp/ver-opp.component.html
+++ b/src/app/modelos/ver-opp/ver-opp.component.html
@@ -43,7 +43,7 @@
                 </div>
             </mat-tab>
             <mat-tab label="7P + C">
-                
+                <app-siete-p [sieteP]="sieteP" (exitTab)="handleExitTab($event)"></app-siete-p>
             </mat-tab>
             <mat-tab label="Hoja de Costos">
                 Aca va la HC
